fixed mango task icon squished problem and sorta optimized for mobile

--- a/src/components/TaskList/components/TaskItem/index.scss
+++ b/src/components/TaskList/components/TaskItem/index.scss
@@ -18,7 +18,7 @@ input, button, submit {
 }
 
 .task-icon {
-  font-size: 35px;
+  font-size: 30px;
 }
 
 .done {
@@ -53,4 +53,8 @@ input, button, submit {
     padding: 0;
   }
   outline: none
+}
+
+.align-center {
+  align-items: center;
 }
